--- a/TP_ESEO_Maven3/.project
+++ b/TP_ESEO_Maven3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP_ESEO_Maven3</name>
+	<name>TP_ESEO_Maven_Git</name>
 	<comment></comment>
 	<projects>
 	</projects>
